--- a/Readme.org
+++ b/Readme.org
@@ -1,7 +1,12 @@
 #+TITLE: 磻溪集 / CK-KZ
 
 #+DATE: 2015-08-29 02:11:21.929457
-* 目次
+* 版本
+ |     CK-KZ|【重刊道藏輯要】|
+ |       HFL|【正統道藏・涵芬樓版】|
+ |      YP-C|【原版道藏輯要】|
+ |      ZTDZ|【正統道藏・三家本】|
+目次
  - [[file:KR5e0061_000.txt][磻溪集 0]]
  - [[file:KR5e0061_001.txt][磻溪集 1]]
  - [[file:KR5e0061_002.txt][磻溪集 2]]
